// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar should not render if no active profile 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
      >
        <div
          class="sc-bdfBwQ iMKUsi mx-auto"
          height="10"
          width="6"
        >
          <svg>
            arrow-left.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8 "
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
          >
            <svg
              width="44"
            >
              ark-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        >
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
              title="Portfolio"
            >
              Portfolio
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/test"
              title="test"
            >
              test
            </a>
          </li>
        </ul>
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ liSwOQ p-1"
                        height="18"
                        width="15"
                      >
                        <svg>
                          notification.svg
                        </svg>
                      </div>
                      <div
                        class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="w-2 h-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 fHYGyx"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iNulIV p-1"
                    height="18"
                    width="18"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex overflow-hidden items-center rounded-lg"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 fHYGyx"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iSzUah p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-700"
            >
              Your balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
            >
              <span
                data-testid="Amount"
              >
                0 BTC
              </span>
            </div>
          </div>
          <div
            class="flex my-0.5 ml-4 -space-x-2"
          >
            <div
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
            >
              <span
                class="text-theme-secondary-text dark:text-theme-secondary-800"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </span>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
      >
        <div
          class="sc-bdfBwQ iMKUsi mx-auto"
          height="10"
          width="6"
        >
          <svg>
            arrow-left.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8 "
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
          >
            <svg
              width="44"
            >
              ark-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        >
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
              title="Portfolio"
            >
              Portfolio
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
              title="Plugins"
            >
              Plugins
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
              title="Exchange"
            >
              Exchange
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
              title="News"
            >
              News
            </a>
          </li>
        </ul>
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ liSwOQ p-1"
                        height="18"
                        width="15"
                      >
                        <svg>
                          notification.svg
                        </svg>
                      </div>
                      <div
                        class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="w-2 h-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 fHYGyx"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iNulIV p-1"
                    height="18"
                    width="18"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex overflow-hidden items-center rounded-lg"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 fHYGyx"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iSzUah p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-700"
            >
              Your balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
            >
              <span
                data-testid="Amount"
              >
                0 BTC
              </span>
            </div>
          </div>
          <div
            class="flex my-0.5 ml-4 -space-x-2"
          >
            <div
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
            >
              <span
                class="text-theme-secondary-text dark:text-theme-secondary-800"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </span>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render as logo-only variant 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1qsoskw-0 iaiHKx"
  >
    <div
      class="flex relative h-21"
    >
      <div
        class="flex flex-1 px-8 ml-12"
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
          >
            <svg
              width="44"
            >
              ark-logo.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render with custom menu 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
      >
        <div
          class="sc-bdfBwQ iMKUsi mx-auto"
          height="10"
          width="6"
        >
          <svg>
            arrow-left.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8 "
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
          >
            <svg
              width="44"
            >
              ark-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        >
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
              title="Portfolio"
            >
              Portfolio
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/test"
              title="test"
            >
              test
            </a>
          </li>
        </ul>
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ liSwOQ p-1"
                        height="18"
                        width="15"
                      >
                        <svg>
                          notification.svg
                        </svg>
                      </div>
                      <div
                        class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="w-2 h-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 fHYGyx"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iNulIV p-1"
                    height="18"
                    width="18"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex overflow-hidden items-center rounded-lg"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 fHYGyx"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iSzUah p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-700"
            >
              Your balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
            >
              <span
                data-testid="Amount"
              >
                0 BTC
              </span>
            </div>
          </div>
          <div
            class="flex my-0.5 ml-4 -space-x-2"
          >
            <div
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
            >
              <span
                class="text-theme-secondary-text dark:text-theme-secondary-800"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </span>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render with shadow if there is a scroll 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1qsoskw-0 jbQhFq"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
      >
        <div
          class="sc-bdfBwQ iMKUsi mx-auto"
          height="10"
          width="6"
        >
          <svg>
            arrow-left.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8 "
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
          >
            <svg
              width="44"
            >
              ark-logo.svg
            </svg>
          </div>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        />
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 jJjuyu"
                data-testid="navbar__buttons--send"
                disabled=""
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iNulIV p-1"
                    height="18"
                    width="18"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex overflow-hidden items-center rounded-lg"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 jJjuyu"
                data-testid="navbar__buttons--receive"
                disabled=""
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iSzUah p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-700"
            >
              Your balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
            >
              <span
                data-testid="Amount"
              >
                0 
              </span>
            </div>
          </div>
          <div
            class="flex my-0.5 ml-4 -space-x-2"
          >
            <div
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
            >
              <span
                class="text-theme-secondary-text dark:text-theme-secondary-800"
              />
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                  >
                    <img
                      alt="Profile Avatar"
                      class="object-cover w-11 h-11 bg-center bg-no-repeat bg-cover rounded-full"
                    />
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render with title 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
  >
    <div
      class="flex relative h-21"
    >
      <button
        class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
      >
        <div
          class="sc-bdfBwQ iMKUsi mx-auto"
          height="10"
          width="6"
        >
          <svg>
            arrow-left.svg
          </svg>
        </div>
      </button>
      <div
        class="flex flex-1 px-8 "
      >
        <div
          class="flex items-center my-auto"
        >
          <div
            class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
          >
            <svg
              width="44"
            >
              ark-logo.svg
            </svg>
          </div>
          <span
            class="text-2xl font-bold"
          >
            Desktop Wallet
          </span>
        </div>
        <ul
          class="flex mr-auto ml-4 space-x-8 h-21"
        >
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
              title="Portfolio"
            >
              Portfolio
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
              title="Plugins"
            >
              Plugins
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
              title="Exchange"
            >
              Exchange
            </a>
          </li>
          <li
            class="flex"
          >
            <a
              class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
              title="News"
            >
              News
            </a>
          </li>
        </ul>
        <div
          class="flex items-center my-auto space-x-4"
        >
          <div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ liSwOQ p-1"
                        height="18"
                        width="15"
                      >
                        <svg>
                          notification.svg
                        </svg>
                      </div>
                      <div
                        class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="w-2 h-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex items-center"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 fHYGyx"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iNulIV p-1"
                    height="18"
                    width="18"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
          <div
            class="flex overflow-hidden items-center rounded-lg"
          >
            <div
              class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 fHYGyx"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  <div
                    class="sc-bdfBwQ iSzUah p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      qr-code.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="flex items-center my-auto ml-8"
        >
          <div
            class="text-right"
          >
            <div
              class="text-xs font-semibold text-theme-secondary-700"
            >
              Your balance
            </div>
            <div
              class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
            >
              <span
                data-testid="Amount"
              >
                0 BTC
              </span>
            </div>
          </div>
          <div
            class="flex my-0.5 ml-4 -space-x-2"
          >
            <div
              class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
            >
              <span
                class="text-theme-secondary-text dark:text-theme-secondary-800"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </span>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
